# pytest-sourceorder

./: .gitignore  CHANGELOG.rst  Makefile  README.rst  pytest.ini  pytest_sourceorder.py  python-pytest-multihost.spec  python-pytest-sourceorder.spec  setup.cfg  setup.py  test_sourceorder.py  tox.ini
