[metadata]
name = pytest-sourceorder
version = 0.6.0
description = Test-ordering plugin for pytest
long_description = file: README.rst, CHANGELOG.rst
url = https://pagure.io/python-pytest-sourceorder
license = GPL
author = Petr Viktorin
author_email = pviktori@redhat.com
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: POSIX
    Framework :: Pytest
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Quality Assurance

[options]
py_modules =
    pytest_sourceorder
install_requires =
    pytest

[options.entry_points]
pytest11 =
    sourceorder = pytest_sourceorder

[wheel]
universal = 1
